--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,13 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>Página home</h1>
+<h1>Criar post para o blog</h1>
+<form method="post" action="Home">
+<label for="Titulo" >Título do blog: </label><br>
+<input type="text" name="Titulo"><br>
+<label for="body" >Post: </label><br>
+<input type="text" name="body"><br>
+<button type="submit">Postar</button>
+</form>
 </body>
 </html>
