--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" th:href="@{/styles.css}">
+
 </head>
 <body>
-<p th:text="${Postagens}" > </p>
+<div th:each="post : ${Postagens}" > 
+<p class="titulo" th:text="${post.titulo}" ></p>
+<p th:text="${post.descricao}"></p>
+</div >
 </body>
 </html>
